tests/baselines/reference/defaultValueInConstructorOverload1.errors.txt
==== tests/cases/compiler/defaultValueInConstructorOverload1.ts (1 errors) ====
    class C {
        constructor(x = '');
                    ~~~~~~
!!! defaultValueInConstructorOverload1.ts(2,17): error TS2174: Default arguments are only allowed in implementation.
        constructor(x = '') {
        }
    }